# pure_os

./: Cargo.toml  x86_64-pure_os.json
.cargo/: config
src/: main.rs  serial.rs  vga_buffer.rs
