[package]
name = "pure_os"
version = "0.1.0"
edition = "2021"
authors = ["tonghui.wu <tonghui.wu@outlook.com>"]

# 使用 `cargo build` 编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用 `cargo build --release` 编译时需要的配置
[profile.release]
panic = "abort" # 禁用 panic 时栈展开

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command=["xbuild"]